--- a/src/app/employee/employee-form/employee-form.component.html
+++ b/src/app/employee/employee-form/employee-form.component.html
@@ -1,5 +1,6 @@
 <div
   class="modal fade"
+  [ngClass]="visible ? 'show' : ''"
   id="employeeModal"
   data-bs-backdrop="static"
   data-bs-keyboard="false"
