--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   class="btn btn-primary"
   data-bs-toggle="modal"
   data-bs-target="#employeeModal"
-  (click)="openModal()"
+  (click)="addModal()"
 >
   Add Employee
 </button>
