--- a/src/app/employee/employee-form/employee-form.component.html
+++ b/src/app/employee/employee-form/employee-form.component.html
@@ -110,7 +110,10 @@
       </form>
       <div id="delete" *ngIf="type === 'delete'">
         <div class="modal-body">
-          <p>Are you sure you want to delete this record?</p>
+          <p>
+            Are you sure you want to delete {{ employee.firstName }}
+            {{ employee.lastName }}'s record?
+          </p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">
